# SleekCode

./: .gitattributes  .gitignore  CLAUDE.md  index.html  overlay.html  package-lock.json  package.json  vite.config.ts
.claude/commands/: end.md  lesson.md  ship.md
.claude/skills/end/: SKILL.md
.claude/skills/lesson/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/ship/: SKILL.md
.github/workflows/: release.yml
commands/: end.md  lesson.md  ship.md
docs/: architecture.md  session-prompts.txt
docs/learnings/: 2026-03-06-fileviewer-infinite-loop-and-codereview-pane.md  2026-03-06-session-restore-terminal-types.md  2026-03-06-tauri-window-resize-decorations-false.md  2026-03-06-xterm-unicode11-emoji-spacing.md  2026-03-07-adding-themes-auto-propagation.md  2026-03-07-claude-session-resume-wsl-spawning.md  2026-03-07-dev-server-lock-error-detection.md  2026-03-07-ezycomposer-image-autocomplete-pane-isolation.md  2026-03-07-modal-positioning-standard.md  2026-03-07-nvm-subshell-path-mismatch.md  2026-03-07-per-cli-settings-and-yolo-mode.md  2026-03-07-pty-double-spawn-react19-strictmode.md  2026-03-07-pty-spawn-dimensions-race.md  2026-03-07-scroll-to-prompt-always-on-and-composer-fix.md  2026-03-07-tab-bar-redesign-hover-icons.md  2026-03-07-template-picker-single-view-ux.md  2026-03-07-terminal-activity-detection.md  2026-03-07-terminal-font-rendering-hack.md  2026-03-07-terminal-keybinding-scroll-to-prompt.md  2026-03-07-undo-close-toast-tabs-panes.md  2026-03-07-window-state-persistence.md  2026-03-07-xterm-file-link-provider.md  2026-03-07-xterm-ghost-text-tui-apps.md  2026-03-08-browser-full-column-settings-and-addpaneasgrid-fix.md  2026-03-08-browser-preview-ux-improvements.md  2026-03-08-cli-ghost-text-relay-ezycomposer.md  2026-03-08-console-to-composer-bridge.md  2026-03-08-devserver-lock-retry-wrong-port.md  2026-03-08-devserver-url-container-query-threshold.md  2026-03-08-fleet-picker-font-pane-placement.md  2026-03-08-interactive-mode-hiding-and-focus.md  2026-03-08-kanban-pane-grid-placement-overlap.md  2026-03-08-kanban-pane-singleton-smart-placement.md  2026-03-08-maximized-window-corners-chopped.md  2026-03-08-recent-project-quick-open-toggle.md  2026-03-08-tab-drag-to-reorder.md  2026-03-08-tabbar-button-scoping-pane-vs-tab.md  2026-03-08-workspace-template-session-counts.md  2026-03-09-addpaneasgrid-single-pane-browser-column.md  2026-03-09-codex-gemini-session-resume.md  (+22 more)
scripts/: ezydev-statusline-wrapper.sh  made-statusline-wrapper.sh  tauri-build.sh  tauri-dev.sh
src/: App.tsx  index.css  main.tsx  overlay-main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/installer-assets/: generate-bitmaps.mjs
src-tauri/src/: lib.rs  main.rs  preview_proxy.rs  preview_proxy_inject.js  pty.rs
src-tauri/src/native_term/: events.rs  mod.rs  parser_bridge.rs  pty_route.rs  region.rs  registry.rs  theme_parse.rs
src-tauri/src/native_term/renderer/: cursor.rs  damage.rs  glyph_atlas.rs  grid.rs  link_scan.rs  mod.rs  pipeline.rs  quad_pipeline.rs
src-tauri/src/native_term/window/: linux.rs  macos.rs  mod.rs  win32.rs
src-tauri/src/overlay/: mod.rs  win32.rs
src/components/: BrowserPreview.tsx  ChangelogModal.tsx  ClaudeTokenWizardModal.tsx  ClearDataModal.tsx  ClipboardImagePreview.tsx  ClipboardImageStrip.tsx  CodeReviewDiffView.tsx  CodeReviewFileList.tsx  CodeReviewPane.tsx  CommandBlockOverlay.tsx  CommandHistory.tsx  CommandPalette.tsx  CommitPopover.tsx  ConnectToGitHubModal.tsx  CreateProjectModal.tsx  CreatePullRequestModal.tsx  DevServerRestoreToast.tsx  DevServerTab.tsx  DevServerTerminalHost.tsx  EditorPane.tsx  EmptyTabLauncher.tsx  FileExplorer.tsx  FileViewerPane.tsx  FloatingPaneWindow.tsx  FloatingPanesLayer.tsx  GamePane.tsx  GitStatusBar.tsx  GlobalContextMenu.tsx  GlobalSearch.tsx  ImageInsertUndoToast.tsx  ImagePreviewModal.tsx  KanbanBoard.tsx  KeyboardShortcutsModal.tsx  NativeTerminalSpike.tsx  NativeTerminalSpikeMount.tsx  PaneExpandButton.tsx  PaneGrid.tsx  PaneSearchBar.tsx  PromptComposer.tsx  PromptHistorySearch.tsx  (+29 more)
src/components/games/: AsteroidsGame.tsx  BlockBreakerGame.tsx  ChessGame.tsx  CrosswordGame.tsx  DonkeyKongGame.tsx  (+14 more)
src/hooks/: useAiTimeTracker.ts  useClipboardImagePaste.ts  useClipboardWatcher.ts  useFileDrop.ts  useNativeCommandBlocks.ts  usePaneSearch.ts  usePty.ts  usePtyNative.ts  useUpdateChecker.ts  useWindowMaximized.ts
src/lib/: card-utils.ts  clipboard-insert.ts  command-block-parser.ts  context-menu-model.tsx  context-parser.ts  crossword-puzzles.ts  diff-parser.ts  editor-theme.ts  file-link-provider.ts  flip.ts  generate-commit-msg.ts  generate-crossword.ts  git-branch-validate.ts  image-mask.ts  iso-week.ts  layout-utils.ts  macos-cli-cache.ts  migrate-ezydev-to-made.ts  native-term-bridge.ts  overlay-bridge.ts  overlay-menu-model.ts  pane-search-registry.ts  platform.ts  promptify.ts  render-pane.tsx  server-commands.ts  session-resume.ts  sessions-index.ts  shell-integration.ts  slash-commands.ts  spawn-dev-server.ts  statusline-setup.ts  terminal-activity.ts  terminal-config.ts  terminal-fonts.ts  terminal-theme.ts  themes.ts  use-orientation.ts  useOverlayMenu.ts  useOverlayToast.ts  (+6 more)
src/native-term/: AutoOverlayPublisher.tsx  FileLinkTooltip.tsx  ImeCompositionPopup.tsx  NativePaneVisibilityCoordinator.tsx  RegionDriver.tsx  frameSync.ts  geometry.ts  useAnimatedOverlay.ts  useNativeFileLinks.ts  useNativePaneRegion.ts  useOverlayPopupAnchor.ts
src/overlay/: OverlayRoot.tsx
src/store/: aiTimeSlice.ts  browserConsoleStore.ts  clipboardImageStore.ts  floatingPanesSlice.ts  gameSlice.ts  historySlice.ts  index.ts  kanbanSlice.ts  launchConfigSlice.ts  layoutSlice.ts  modalCoordinationSlice.ts  nativeRendererSlice.ts  overlayRegionSlice.ts  recentProjectsSlice.ts  serverSlice.ts  sessionSlice.ts  sidebarSlice.ts  snippetSlice.ts  tabSlice.ts  terminalSlice.ts  themeSlice.ts  undoClearStore.ts  undoCloseStore.ts  voiceSlice.ts
src/types/: index.ts
tasks/: todo.md
(+10 files in other folders)
