[package]
name = "ezydev"
version = "0.1.50"
description = "AI Terminal Workspace"
authors = ["you"]
edition = "2021"

[lib]
name = "ezydev_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
