[package]
name = "made"
version = "0.1.55"
description = "AI Terminal Workspace"
authors = ["you"]
edition = "2021"

[lib]
name = "made_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

# native_term (Phase 0 spike — child HWND + wgpu)
wgpu = "22"
raw-window-handle = "0.6"
crossbeam-channel = "0.5"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_UI_HiDpi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Input_Ime", "Win32_System_LibraryLoader", "Win32_System_DataExchange", "Win32_System_Memory"] }
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"

# native_term R1: terminal parser + glyph rendering. Versions chosen for
# wgpu 22 lockstep — glyphon 0.6 pins wgpu 22 exactly. Bumping wgpu later
# requires bumping glyphon in tandem (see plan risk #2).
glyphon = "0.6"
alacritty_terminal = "0.24"
unicode-width = "0.2"
regex = "1"

# native_term Phase 4 macOS spike: NSView sibling of WKWebView + Metal surface.
# wgpu reuses its existing 22 pin (already Metal-capable). We use objc2 for
# NSView/NSWindow/CALayer FFI — modern successor to the `cocoa`/`objc` crates.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-app-kit = "0.3"
objc2-quartz-core = "0.3"
# CoreGraphics — only the bits we touch (CGPath for the hole-cut mask path,
# CGColor for the mask's opaque fill, CGAffineTransform so we can pass null
# transforms to CGPath::add_rect). objc2-core-graphics features are tight to
# keep compile time down.
objc2-core-graphics = { version = "0.3", features = ["CGPath", "CGColor", "CGColorSpace", "CGAffineTransform"] }
# dispatch2 = libdispatch (GCD) bindings. Used to bounce NSView lifecycle ops
# (addSubview, frame, isHidden, removeFromSuperview) onto the main thread,
# since AppKit requires main-thread access and Tauri command handlers run
# off-main on the tokio runtime.
dispatch2 = "0.3"

# native_term Phase 4 Linux spike: GTK3 DrawingArea sibling of webkit2gtk
# WebView + wgpu surface adopting the realized GdkWindow's XID (X11) or
# wl_surface (Wayland). gtk 0.18 / gdk 0.18 match the versions tao 0.34
# pulls in transitively, so they share GObject types without duplicating the
# crate tree. cairo is needed for the input-region (hole-cut) call.
[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", package = "gtk" }
gdk = { version = "0.18", package = "gdk" }
glib = "0.18"
cairo-rs = { version = "0.18", package = "cairo-rs" }
