[package]
name = "made"
version = "0.1.61"
description = "AI Terminal Workspace"
authors = ["you"]
edition = "2021"

[lib]
name = "made_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

# native_term (Phase 0 spike — child HWND + wgpu)
wgpu = "22"
raw-window-handle = "0.6"
crossbeam-channel = "0.5"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_UI_HiDpi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Input_Ime", "Win32_System_LibraryLoader", "Win32_System_DataExchange", "Win32_System_Memory"] }
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"

# native_term R1: terminal parser + glyph rendering. Versions chosen for
# wgpu 22 lockstep — glyphon 0.6 pins wgpu 22 exactly. Bumping wgpu later
# requires bumping glyphon in tandem (see plan risk #2).
glyphon = "0.6"
alacritty_terminal = "0.24"
unicode-width = "0.2"
regex = "1"

# WebView2 COM uses windows 0.61. The native terminal code above uses
# windows 0.58, so keep the WebView2 Windows types under an alias.
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38.2"
windows-webview2 = { package = "windows", version = "0.61.3", features = ["Win32_Foundation"] }

# Unix (macOS/Linux) only: alacritty_terminal 0.24 -> rustix-openpty 0.1.1 pulls
# rustix 0.38 WITHOUT its `std` feature, so rustix falls back to its no_std
# `OwnedFd` polyfill, which mismatches `std::os::fd::OwnedFd` in tty/unix.rs and
# breaks the build. Depending on rustix 0.38 with `std` here turns the feature on
# via cargo feature-unification, fixing the type mismatch. Windows is unaffected
# (it doesn't use the unix pty backend).
[target.'cfg(unix)'.dependencies]
rustix = { version = "0.38", features = ["std"] }
